# DCodigoAbierto

./: .gitignore  Cargo.toml  README.md  plan.md  plan.opencode.md  themes.txt
crates/ai/: Cargo.toml
crates/ai/src/: agent.rs  lib.rs  provider.rs  session.rs
crates/ai/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/ai/src/tools/: diagnostics.rs  get_buffer.rs  glob_tool.rs  grep_tool.rs  list_dir.rs  mod.rs  read_file.rs  shell.rs  web_fetch.rs  write_file.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  command.rs  fuzzy.rs  lib.rs  message.rs  state.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs  theme.rs  watcher.rs
crates/events/: Cargo.toml
crates/events/src/: bus.rs  crossterm_bridge.rs  lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  codec.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: buffer.rs  cursor.rs  lib.rs  location.rs  lsp_event.rs  view_state.rs
crates/ui/: Cargo.toml
crates/ui/src/: highlight.rs  layout.rs  lib.rs  palette.rs  render.rs
crates/ui/src/widgets/: chat.rs  command_palette.rs  completion.rs  editor.rs  fuzzy.rs  home.rs  meta_panel.rs  mod.rs  model_selector.rs  permission.rs  references.rs  sidebar.rs  statusbar.rs  tabbar.rs  theme_selector.rs
src/: main.rs
