[workspace]
members = [
    "crates/types",
    "crates/events",
    "crates/lsp",
    "crates/config",
    "crates/ui",
    "crates/app",
    "crates/ai",
]
resolver = "2"

[workspace.package]
version   = "0.1.0"
edition   = "2021"
authors   = ["DCodigoAbierto"]
license   = "MIT"

[package]
name      = "dcodigoabierto"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dca"
path = "src/main.rs"

[dependencies]
dca-app    = { path = "crates/app" }
dca-events = { path = "crates/events" }
dca-config = { path = "crates/config" }

tokio              = { workspace = true }
color-eyre         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
clap_complete      = { workspace = true }
ratatui            = { workspace = true }

# Versiones compartidas de dependencias en todo el workspace
[workspace.dependencies]
# TUI
ratatui   = { version = "0.29",  features = ["all-widgets", "macros"] }
crossterm = { version = "0.28",  features = ["event-stream"] }

# Async
tokio     = { version = "1",     features = ["full"] }
futures   = "0.3"

# Error handling & logging
color-eyre           = "0.6"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

# Serialización
serde      = { version = "1",  features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Utilidades
unicode-width = "0.1"
walkdir       = "2"
lsp-types     = "0.97"
nucleo        = "0.5"
notify        = { version = "6", default-features = false, features = ["macos_fsevent"] }
clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest       = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait   = "0.1"
tokio-util    = { version = "0.7", features = ["rt"] }

[profile.dev]
opt-level = 0

[profile.release]
lto           = true
codegen-units = 1
strip         = "symbols"
opt-level     = 3

# Perfil para profiling con cargo-flamegraph:
#   cargo build --profile profiling
#   cargo flamegraph --profile profiling -- [args]
[profile.profiling]
inherits      = "release"
debug         = true        # símbolos para perf/flamegraph
strip         = "none"
