[package]
name    = "dca-ai"
version.workspace = true
edition.workspace = true

[dependencies]
dca-config = { path = "../config" }
dca-types  = { path = "../types" }

serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
color-eyre  = { workspace = true }

async-trait  = { workspace = true }
reqwest      = { workspace = true }
tokio-util   = { workspace = true }
futures      = { workspace = true }
