[package]
name    = "dca-app"
version.workspace = true
edition.workspace = true

[dependencies]
dca-ui     = { path = "../ui" }
dca-events = { path = "../events" }
dca-config = { path = "../config" }
dca-types  = { path = "../types" }
dca-lsp    = { path = "../lsp" }

dca-ai     = { path = "../ai" }

ratatui      = { workspace = true }
crossterm    = { workspace = true }
tokio        = { workspace = true }
color-eyre   = { workspace = true }
tracing      = { workspace = true }
walkdir      = { workspace = true }
nucleo       = { workspace = true }
notify       = { workspace = true }
serde_json   = { workspace = true }
tokio-util   = { version = "0.7", features = ["rt"] }
