[package]
name    = "dca-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde      = { workspace = true }
toml       = { workspace = true }
color-eyre = { workspace = true }
tracing    = { workspace = true }
dirs-next  = "2"
notify     = { workspace = true }
tokio      = { workspace = true }
