[package]
name    = "dca-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
dca-types  = { path = "../types" }
dca-events = { path = "../events" }

lsp-types  = { workspace = true }
tokio      = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
tracing    = { workspace = true }
